--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   http: any
   shared_preferences: any
   intl: any
-  toast: any  
+  toast: any
+  url_launcher: any
+  firebase_messaging: any  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
