--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   intl: any
   toast: any
   url_launcher: any
-  firebase_messaging: any  
+  firebase_messaging: any
+  esys_flutter_share: any  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
