--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   url_launcher: any
   firebase_messaging: any
   esys_flutter_share: any  
-  folding_cell: ^0.1.2
+  flappy_search_bar: 1.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
